@@ -55,3 +55,4 @@ from .statistics.error_function import error_function
 # hyperbolic functions
 from .statistics.sinh import sinh
 from .statistics.cosh import cosh
+from .statistics.tanh import tanh
