@@ -10,6 +10,7 @@ Added
 * ``add_to_mean()``
 * ``sinh()``
 * ``cosh()``
+* ``tanh()``
 
 0.3.0 (2016-12-03)
 -----------
